# Algorithmik

./: .gitignore  CMakeLists.txt  README.md
contraction-hierarchies-dijkstra/: CMakeLists.txt
contraction-hierarchies-dijkstra/source/: dijkstra.cpp  dijkstra.h  graph.cpp  graph.h  main.cpp  util.h
memory-optimized-dijkstra/: CMakeLists.txt  Makefile
memory-optimized-dijkstra/source/: dijkstra.cpp  dijkstra.h  graph.cpp  graph.h  main.cpp
source/: dijkstra.cpp  dijkstra.h  graph.cpp  graph.h  main.cpp
